--- a/TODO
+++ b/TODO
@@ -1,16 +1,25 @@
 
-		 Useless Containers Library
-		 ==========================
+		       Useless Containers Library
+		       ==========================
 
-		    List of things to do
-		    --------------------
+			  List of things to do
+			  --------------------
 
+
+* Do the subtree binary tree levelorder iterator, adding a root argument
+  to the iterator function that stops the path when going upward.
+* Write the btree range iterators.
+
+* Test the btree subtree iterators.
+* Test the btree range iterators.
+
+## ------------------------------------------------------------
 
 0.9
 ---
 
-* Understand  why  in  hell  when  upgrading  the  Slackware
-  package 'doinst.sh' is executed twice.
+* Understand  why   in  hell   when  upgrading  the   Slackware  package
+  'doinst.sh' is executed twice.
 
 ## ------------------------------------------------------------
 
@@ -28,15 +37,14 @@ Graph
 * Path-between-nodes existence predicate after DFS. 
 * Add algorithms
 
-   - connected  graph predicate  (DFS-not-honor  on a  node,
-     then check if all the nodes have been touched);
+   - connected graph  predicate (DFS-not-honor on a node,  then check if
+     all the nodes have been touched);
 
    - acyclic graph predicate;
 
-   - linearisation  of  nodes  for  DAGs  (directed  acyclic
-     graphs):  build a string  of nodes  in which  the order
-     left-to-right  honors  the  link  horders  (based  upon
-     DFS-honor);
+   - linearisation of nodes for  DAGs (directed acyclic graphs): build a
+     string of  nodes in which  the order left-to-right honors  the link
+     horders (based upon DFS-honor);
 
    ... see the book on graph algorithms
 
@@ -46,12 +54,11 @@ Graph
 Tree
 ----
 
-* Write the levelorder iterator for the tree container? Also
-  known as breadth first.
+* Write the  levelorder iterator for  the tree container? Also  known as
+  breadth first.
 
-* Write  the "string"  iterator  for the  tree. An  iterator
-  whose value  is the string of  nodes from the  root to the
-  currently selected one.
+* Write the "string"  iterator for the tree. An  iterator whose value is
+  the string of nodes from the root to the currently selected one.
 
 
 Binary tree
@@ -69,4 +76,7 @@ Heap
 ### end of file
 # Local Variables:
 # mode: text
+# coding: iso-latin-1-unix
+# fill-column: 72
+# paragraph-start: "*"
 # End:
